fix : fse res spacing

--- a/sass/backend/editor.scss
+++ b/sass/backend/editor.scss
@@ -1,4 +1,7 @@
 body.post-type-sureforms_form {
+	padding-left: 10px;
+    padding-right: 10px;
+
 	.edit-post-sidebar > .components-panel > .components-panel__body {
 		display: none;
 
@@ -40,7 +43,8 @@ body.post-type-sureforms_form {
 
 	.is-desktop-preview,
 	.is-tablet-preview,
-	.is-mobile-preview {
+	.is-mobile-preview,
+	.block-editor-iframe__body{
 		// Need override / !Important here. As value are added inline by wordpress.
 		background-image: var( --srfm_bg ) !important;
 		background-position: center !important;
@@ -63,6 +67,7 @@ body.post-type-sureforms_form {
 		padding: 0;
 		margin: 0 -0.3em;
 		margin-top: 2em;
+		padding: 0.3em;
 
 		.block-list-appender,
 		.block-editor-block-list__block {
@@ -154,7 +159,7 @@ body.post-type-sureforms_form {
 
 	.srfm-submit-btn-container {
 		position: relative;
-		padding: 0 0.3em;
+		margin: 0 0.3em;
 		margin-top: 1.2em;
 
 		.srfm-submit-button {
@@ -170,6 +175,10 @@ body.post-type-sureforms_form {
 			&:after {
 				content: var( --srfm_submit_button_text );
 			}
+		}
+
+		@media ( max-width:778px ) {
+			padding: 0;
 		}
 	}
 
